# huffman-archiver

./: CMakeLists.txt  compress.cpp  compress.h  decompress.cpp  decompress.h  heap.cpp  heap.h  main.cpp  reader.cpp  reader.h  readme.md  trie.cpp  writer.cpp  writer.h
tests/: test.cpp
tests/mock/: test1.txt  test4.txt
